job/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-deployment
  labels:
    app: job
  namespace: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: job
  template:
    metadata:
      labels:
        app: job
    spec:
      containers:
      - name: job
        image: 15012013/job:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
            memory: 455Mi
          limits:
            cpu: 200m
            memory: 1Gi
        ports:
          - containerPort: 5089
---
apiVersion: v1
kind: Service
metadata:
  name: job-clusterip-svc
  namespace: application
spec:
  selector:
    app: job
  ports:
    - name: job
      protocol: TCP
      port: 5091
      targetPort: 5091
